gcc/testsuite/rust/rustc/ui/issues/issue-3668-non-constant-value-in-constant/issue-3668-2_dg.rs
//@ run-rustfix
#![allow(unused_variables, dead_code)]
fn f(x:isize) {
    static child: isize = x + 1;
// { dg-error ".E0435." "" { target *-*-* } .-1 }
}

fn main() {}

